--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -22,7 +22,7 @@
    <a href="https://github.com/DVSnell"><img src="./images/GitHub-Mark-120px-plus.png" alt="Github icon to DVSnell" title="DVSnell" /></a>
   </div>
   <div id="twitlink">
-   <a href="https://twitter.com/DonVSnell"><img src="./images/twitter.gif" alt="Twitter icon to @DonVSnell" title="@DonVSnell" /></a>
+   <a href="https://twitter.com/DonVSnell"><img src="./images/rep-twit.png" alt="Twitter icon to @DonVSnell" title="@DonVSnell" /></a>
   </div>
  </body>
 </html>
