--- a/site/pages/portfolio.html
+++ b/site/pages/portfolio.html
@@ -36,40 +36,12 @@
               <iframe width="560" height="315" src="https://www.youtube.com/embed/xoTNHfuNhKY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </td>
-        </tr>
-      <tr>
-      <td>
-        <div class="gallerybox">
-          <h1>The Songs of Distant Earth</h1>
-            <iframe width="560" height="315" src="https://umt.box.com/s/tk31keho8cva01pfxcxc0hns8qcu6dcz"></iframe>
-        </div>
-      </td>
-      <td>
-        <div class="gallerybox">
-          <h1>Concert Poster</h1>
-          <div class="videos">
-            <iframe width="560" height="315" src="https://umt.box.com/s/ob2tuhua731l2ei60e76a19eumyww9to"></iframe>
-        </div>
-      </div>
-      </td>
-    </tr>
-    <tr>
-    <td>
-      <div class="gallerybox">
-        <h1>Big & Small</h1>
-          <iframe width="560" height="315" src="https://umt.box.com/s/zp9d3zofg50xnprr0hoi9sj1v538x2s0"></iframe>
-      </div>
-    </td>
-    <td>
-      <div class="gallerybox">
-        <h1>Horizon</h1>
-        <div class="videos">
-          <iframe width="560" height="315" src="https://umt.box.com/s/c81umbpjo0xom8s51shb0qeudhmrd1th"></iframe>
-      </div>
+      </tr>
+    </table>
+    <div class="infobox">
+      <h1>Still Album</h1>
+      <iframe width="800" height="1060" src="http://s83.photobucket.com/user/PraetorianElitest/embed/slideshow/Portfolio"></iframe>
     </div>
-    </td>
-  </tr>
-   </table>
   </div>
  </body>
 </html>
