--- a/site/pages/portfolio.html
+++ b/site/pages/portfolio.html
@@ -40,7 +40,7 @@
     </table>
     <div class="infobox">
       <h1>Still Album</h1>
-      <iframe width="800" height="1060" src="http://s83.photobucket.com/user/PraetorianElitest/embed/slideshow/Portfolio"></iframe>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTzS39WSd-GWjUkyCdgfND-nP5wbZiOkODf-JGr6_pu9tTuXce8ysh9As2LUbbQFWTVbbrPACsbFKfr/embed?start=true&loop=true&delayms=5000" frameborder="0" width="800" height="475" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
   </div>
  </body>
